@@ -1,0 +1,19 @@
+[details]
+name        = "Show RSS"
+description = "Displays a RSS Feed in a block"
+author      = "Werner M. Krauss"
+created     = "2006-08-08"
+version     = "0.6"
+copyright   =
+
+[rssSource]
+type        = "text"
+value       = "http://seagullproject.org/export/rss/"
+label       = "RSS resource"
+description = "URI of RSS feed"
+
+[itemsToShow]
+type        = "text"
+value       = 5
+label       = "Items to show"
+description = "Number of Items to show"
